[gd_scene load_steps=5 format=3 uid="uid://bvpo8k8gv33hi"]

[ext_resource type="Texture2D" uid="uid://dkwfwdg1i3h11" path="res://resources/cardFront.png" id="1_5rcf7"]
[ext_resource type="Script" path="res://hand_card.gd" id="1_efjik"]
[ext_resource type="Texture2D" uid="uid://d1qfm8lcl73fa" path="res://resources/free-pixel-art-tiny-hero-sprites/1 Pink_Monster/Pink_Monster.png" id="6_3rpsd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ind7j"]
size = Vector2(97, 124)

[node name="pink_monster_Card" type="CharacterBody2D"]
script = ExtResource("1_efjik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(49.5, 63)
shape = SubResource("RectangleShape2D_ind7j")

[node name="CardFront" type="Sprite2D" parent="."]
position = Vector2(50, 67)
texture = ExtResource("1_5rcf7")

[node name="PinkMonster" type="Sprite2D" parent="."]
position = Vector2(53, 47)
texture = ExtResource("6_3rpsd")

[node name="PowerHealth" type="Label" parent="."]
offset_left = 12.0
offset_top = 87.0
offset_right = 90.0
offset_bottom = 110.0
autowrap_mode = 3

[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="." to="." method="_on_mouse_shape_exited"]
